# gl_project0

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  build.sh
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
example/: CMakeLists.txt  example.cpp
example/res/shaders/: fragment.glsl  vertex.glsl
glad/: glad.c
include/: gl_project0.hpp
include/Objects/: camera.hpp  mesh.hpp  renderer.hpp  texture.hpp
include/Primitives/: cube.hpp  quad.hpp
include/gl0/: gl_project0.hpp
include/gl0/Objects/: camera.hpp  material.hpp  mesh.hpp  renderer.hpp  shader.hpp  shaderParser.hpp  texture.hpp
include/gl0/Primitives/: cube.hpp  quad.hpp
include/glad/: glad.h
res/shaders/: fragment.glsl  vertex.glsl
src/: entry.cpp  gl_project0.cpp  main.cpp
src/io/: shaderParser.hpp
src/objects/: camera.cpp  camera.hpp  material.cpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shaderParser.hpp  shaderProgram.cpp  shaderProgram.hpp  texture.cpp  texture.hpp  texture2D.cpp  texture2D.hpp
src/primitives/: cube.cpp  cube.hpp  quad.cpp
src/shaders/: fragment2.glsl
src/shapes/: quad.hpp  triangle.hpp
test/: CMakeLists.txt  test.cpp
test/res/shaders/: fragment.glsl  vertex.glsl
